Modified pom.xml to produce a .war file for deployment to tomcat server

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.project</groupId>
 	<artifactId>bookzy</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war </packaging>
 	<name>bookzy</name>
 	<description>Class-end project</description>
 	<properties>
@@ -27,9 +28,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
+		<finalName>${project.artifactId}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
